# goz

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/goz-core/src/query/: engine.rs  mod.rs
crates/goz-core/src/usn/: cursor.rs
crates/goz-daemon/src/: main.rs  pulse.rs  run.rs  server.rs  service.rs  supervisor.rs  tail.rs
crates/goz-winfs/src/: cancel_io.rs
docs/: DESIGN.md
