[workspace]
resolver = "3"
members = [
    "crates/goz-core",
    "crates/goz-winfs",
    "crates/goz-daemon",
    "crates/goz-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/mustafaahci/goz"
authors = ["Mustafa Ahci"]

[workspace.dependencies]
# core (pure)
zerocopy = { version = "0.8", features = ["derive"] }
memchr = "2.7"
rustc-hash = "2"
# raw-entry hash table for the name intern set: keys live in the arena, the
# table stores only ids, so interning costs 4 bytes per unique name.
hashbrown = { version = "0.16", default-features = false, features = ["inline-more"] }
rayon = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
unicode-normalization = "0.1"
# cli
jiff = "0.2"
# winfs
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
] }
# daemon
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal"] }
# thread-caching allocator: the query path allocates a path buffer per hit, and
# on a broad query that is millions of small allocations the Windows default heap
# serializes; mimalloc measured ~30% faster on that path.
mimalloc = "0.1"
# mi_collect: return freed bootstrap memory to the OS before pinning the
# working set (the pin floors the current RSS, so purge first).
libmimalloc-sys = { version = "0.1", features = ["extended"] }
windows-service = "0.8"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# dev
proptest = "1"
criterion = "0.5"

# Shared lint policy. Deliberately narrow: these encode habits the code already
# keeps, so the table is a ratchet against drift rather than a cleanup backlog.
# Notably absent is `missing_docs`: 107 public items are undocumented, and with
# `RUSTFLAGS: -D warnings` in CI the lint would have to land with all 107 doc
# comments in one commit. It is also the wrong norm to borrow here, since it
# exists for published crates with an external contract.
[workspace.lints.rust]
# goz-winfs exists to hold the unsafe, so make each unsafe op state its own
# scope instead of inheriting a blanket one from the fn signature.
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Every unsafe block in goz-winfs already carries a SAFETY comment. This is what
# keeps the next one from skipping it.
undocumented_unsafe_blocks = "deny"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
debug = true
lto = "fat"
